chore: fixes footer menu wrapping and alignment not previously working [#1322]

--- a/assets/scss/elements/_footer.scss
+++ b/assets/scss/elements/_footer.scss
@@ -4,6 +4,7 @@ footer {
 
 .footer-menu {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   .hfg-item-left &, .hfg-item-center & {
     li:not(:last-child) {
